Bug 164202 - Every time I try to delete an object in a gallery folder that I inserted, LibreOffice crashes in vcl/source/bitmap/bitmap.cxx:212
Summary: Every time I try to delete an object in a gallery folder that I inserted, Lib...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.2.1 release
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.5
Keywords: bibisected, bisected, regression, wantBacktrace
: 166809 (view as bug list)
Depends on:
Blocks: Gallery Crash
  Show dependency treegraph
 
Reported: 2024-12-05 23:59 UTC by steve hirshman
Modified: 2026-04-20 11:58 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description steve hirshman 2024-12-05 23:59:12 UTC
Description:
I created a new folder (with Insert) in the Gallery. Tried to drag-drop downloaded image into new folder but nothing happened. I did that twice and still nothing appeared in the new folder. I then closed LibreOffice and reopened it, and now 2 copies of the image appeared in the new folder. So I right-clicked one of the duplicates and selected Delete, and LibreOffice crashed. The only way I found to get rid of the 2 copies was to Delete the entire folder, which is not very satisfactory.

Steps to Reproduce:
1.Insert new folder in Gallery
2.Drag drop image from Writer into new folder, nothing happens
3.Close Writer and reopen and image is in folder, sometimes more than once. Try to delete extra image and Writer crashes


Actual Results:
LibreOffice crashed

Expected Results:
Should have removed the extra copy of the image from the Gallery folder


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 stragu 2024-12-06 01:47:47 UTC
Thank you for the report, confirmed on Linux as well:

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Crash report: https://crashreport.libreoffice.org/stats/crash_details/95db6551-1193-43c6-9721-e47dadd85a96

Same issue in Calc: https://crashreport.libreoffice.org/stats/crash_details/7cad7122-fe19-480c-b2d2-e7dc67bb1a06

No crash (and addition into gallery theme is visible) in:

Version: 24.2.6.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.6-0ubuntu0.24.04.1
Calc: threaded

-> regression.

Are you able to link to a crash report too?
Comment 2 stragu 2024-12-06 04:16:09 UTC
For the record:
- recently fixed gallery crash in bug 161606
- bug 162593 mentions gallery crash and the addition not showing, but has gotten very messy
- bug 163409 could be used to focus on the addition not showing (while this here bug could focus on the crash following the comment 0 steps)
Comment 3 stragu 2024-12-06 06:32:28 UTC
Reproduced in own master build from today's sources:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6926c820ceea1a1337a97b0afda95b072027a6ff
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded
Comment 4 Saburo 2025-03-04 08:58:21 UTC
Bibisected with linux-64-24.8

commit 09c6204b6309321aa25c542f918fde9f5f3f7fe2
author	Oliver Specht <oliver.specht@cib.de>

tdf#81880 Search the Gallery

Adds a search field to the gallery to search for icons titles.
Wildcards '*' and '?' are supported
Comment 5 Buovjaga 2025-05-15 13:58:39 UTC
(In reply to Saburo from comment #4)
> Bibisected with linux-64-24.8
> 
> commit 09c6204b6309321aa25c542f918fde9f5f3f7fe2
> author	Oliver Specht <oliver.specht@cib.de>
> 
> tdf#81880 Search the Gallery
> 
> Adds a search field to the gallery to search for icons titles.
> Wildcards '*' and '?' are supported

Then let's add Oliver to Cc.
Comment 6 Commit Notification 2025-05-22 05:54:32 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8eb5d8503adb589239788f649f93d0ef51c2a47

tdf#164202 Update gallery data on insert/remove

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2025-05-27 13:24:22 UTC
Oliver: bug 162593 comment 47 has some testing results:

> The issue is still present in 25.2.4.1. However the good news is that the
> situation has considerably improved in the daily build of 25.8:
> 
> 1) Dragging an object to a theme, now works, even if it is slow. The object
> becomes visible in the theme without the need to restart libreoffice. There
> is a considerable delay between the dragging of the object into the gallery
> theme and the object actually making its appearance in the theme.
> 
> 2) Deleting an object from a theme works too. Libreoffice does not crash.
> 
> There is one thing that does not yet work, though:
> 
> An object added to a theme cannot be dragged back into a drawing until
> libreoffice is restarted.
Comment 8 Oliver Specht (CIB) 2025-06-02 07:05:08 UTC
(In reply to Buovjaga from comment #7)

> > There is one thing that does not yet work, though:
> > 
> > An object added to a theme cannot be dragged back into a drawing until
> > libreoffice is restarted.
Just checked that. Here it behaves a bit differently. I don't need a restart.

I can drag it into a new/loaded document from the gallery of that document.

And it works to drag the image into a different already opened document if I update the theme from the gallery control of that other document.
Comment 9 Julien Nabet 2025-06-13 16:57:44 UTC
Following last 2 comments, couldn't we consider that the bug (the crash) is fixed?
I mean the other symptoms described bug 162593 comment 47 may be related but are different.
Comment 10 Caolán McNamara 2025-06-25 20:22:12 UTC
The crash seems fixed by the above.
Comment 11 Caolán McNamara 2025-06-25 20:22:24 UTC
*** Bug 166809 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2025-06-26 13:50:00 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/3fbf15923e7bd1f806dc8397f73d40aaff79744d

tdf#164202 Update gallery data on insert/remove

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Shreejana 2026-04-20 11:58:02 UTC
While I first insert the image into the new gallery it didn't apper as soon as i added but after few seconds or after opening again it appeared but didn't crashed when deleting 
Version: 26.2.0.3 (X86_64)
Build ID: 620(Build:3)
CPU threads: 8; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

No issue with the master version