tdf#164202 Update gallery data on insert/remove

Fixes crashes introduced with 09c6204b6309321aa25c542f918fde9f5f3f7fe2

Change-Id: Ifca32646c8ba5abce647934e1d2ddac8a8eba2ed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185584
Tested-by: Jenkins
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
(cherry picked from commit f8eb5d8503adb589239788f649f93d0ef51c2a47)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187008
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>