include/svx/galmisc.hxx
@@ -166,7 +166,8 @@ enum class GalleryHintType
     THEME_RENAMED,
     THEME_CREATED,
     THEME_UPDATEVIEW,
-    CLOSE_OBJECT
+    CLOSE_OBJECT,
+    ADD_OBJECT
 };
 
 class GalleryHint final : public SfxHint
